--- a/index.html
+++ b/index.html
@@ -6,23 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
   rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="app.css">
   <title>Customer Classifier</title>
 </head>
 <body>
-  
+  <div class="text-center">
+  		<h1 class="heading">Customer Rating System</h1>
+	</div>
   <section class="header">
     <div class="container p-5">
     <div class="d-sm-flex align-items-center justify-content-around">
-      <button type="button" class="btn btn-danger">High Risk</button>
-      <button type="button" class="btn btn-primary">Medium Risk</button>
-      <button type="button" class="btn btn-warning">Low Risk</button>
+      <button type="button" class="btn btn-danger" onclick="functionHigh()">High Risk</button>
+      <button type="button" class="btn btn-primary" onclick="functionMed()">Medium Risk</button>
+      <button type="button" class="btn btn-warning" onclick="functionLow()">Low Risk</button>
     </div>
     </div>
 
+    <p class="text-center" id="customers">
+    	
+    </p>
+    
   </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script>
+  	function functionHigh() {
+  		document.getElementById("customers").innerHTML = "High Risk";
+	}
+	function functionMed() {
+  		document.getElementById("customers").innerHTML = "Med Risk";
+	}
+	function functionLow() {
+  		document.getElementById("customers").innerHTML = "Low Risk";
+	}
+  </script>
 </body>
 </html>
